--- a/index.html
+++ b/index.html
@@ -15,112 +15,6 @@
   <title>Mishka - интернет - магазин</title>
 </head>
 <body>
-<<<<<<< HEAD
-    <header class="header">
-        <nav class="nav">
-            <div class="menu-top opened">
-                <div class="menu-top__crown">
-                        <a class="menu-top__logo-link" href="index.html">
-                            <img class="menu-top__logo-mobile" src="src/img/logo-mobile.png" width="86px" height="35px" alt="Mishka">
-                        </a>
-                       <div class="hamburger-menu">
-                           <span class="hamburger-btn closed" id="buttonMenu"></span>
-                       </div>
-                </div>
-                <ul class="menu-top__list closed" id="menuList">
-                            <li class="menu-top__logo">
-                                <a class="menu-top__logo-link" href="index.html">
-
-                                    <img class="menu-top__logo-tablet" src="src/img/logo-tablet.png" width="113px" height="46px" alt="Mishka">
-                                    <img class="menu-top__logo-desktop" src="src/img/logo-desktop.png" width="149px" height="72px" alt="Mishka">
-                                </a>
-                            </li>
-                           <li class="menu-top__item">
-                               <a class="menu-top__link menu-top__link--catalog" href="catalog.html">
-                                   Каталог товаров
-                                </a>
-                           </li>
-                           <li class="menu-top__item">
-                               <a class="menu-top__link menu-top__link--form" href="form.html" target="blank">Вязание на заказ</a>
-                           </li>
-                           <li class="menu-top__item">
-                               <form class="search-form" action="" method="get">
-                                   <button class="search-submit" type="submit"></button>
-                                   <label class="search-label">Поиск по сайту</label>
-                                   <input class="search-input" type="search" name="search" placeholder="Поиск по сайту">
-                               </form>
-                           </li>
-                           <li class="menu-top__item menu-top__item--cart">
-                                <a class="menu-top__link menu-top__link--cart" href="#"><span class="menu-top__link-cart"></span>Корзина: пока пуста</a>
-                           </li>
-                           <li class="menu-top__item menu-top__item--delivery">
-                               <p class="menu-top__text menu-top__text--delivery">Бесплатная доставка по России</p>
-                           </li>
-                           <li class="menu-top__item menu-top__item--new">
-                               <a class="menu-top__link menu-top__link--new">Новые поступления</a>
-                           </li>
-                           <li class="menu-top__item menu-top__item--sale">
-                                <a class="menu-top__link menu-top__link--sale">Распродажа</a>
-                           </li>
-                   </ul>
-            </div>
-            <div class="menu-bottom">
-                <div class="menu-bottom__bg">
-                    <div class="menu-bottom__cover">
-                    <h1 class="menu-bottom__title">Милые штуки ручной работы для дома</h1>
-                    <ul class="menu-bottom__list">
-                        <span class="menu-bottom__line"></span>
-                    <li class="menu-bottom__item">
-                            <a class="menu-bottom__link menu-bottom__link--left" href="#">Предметы интерьера</a>
-                    </li>
-                    <li class="menu-bottom__item">
-                            <a class="menu-bottom__link menu-bottom__link--right" href="#">Детские игрушки</a>
-                    </li>
-                  </ul>
-                  </div>
-               </div>
-           </div>
-        </nav>
-    </header>
-    <main class="main">
-       <section class="catalog-card">
-          <div class="catalog-card__item">
-             <h3 class="catalog-card__title catalog-card__title--hot">Вязаные корзинки</h3>
-                <span class="catalog-card__hot-sale">Товар недели</span>
-                <div class="catalog-card__detail">
-                    <p class="catalog-card__descr">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
-                    <table class="catalog-card__table table">
-                       <tr class="catalog-card__row table__row">
-                          <td class="catalog-card__cell table__cell">Цвет:</td>
-                          <td class="catalog-card__cell table__cell">«Тиффани»/серый</td>
-                        </tr>
-                        <tr class="catalog-card__row table__row">
-                          <td class="catalog-card__cell table__cell">Диаметр:</td>
-                          <td class="catalog-card__cell table__cell">25 см</td>
-                       </tr>
-                       <tr class="catalog-card__row table__row">
-                          <td class="catalog-card__cell table__cell">Высота:</td>
-                          <td class="catalog-card__cell table__cell">15 см</td>
-                       </tr>
-                   </table>
-                  </div>
-                <div class="catalog-card__picture">
-                    <picture>
-                        <source media="(min-width: 1024px)"
-                               srcset = "src/img/triple-desktop-2x.webp 2x, src/img/triple-desktop-1x.webp 1x" type ="image/webp"
-                               srcset = "src/img/triple-desktop-2x.jpg 2x, src/img/triple-desktop-1x.jpg 1x" type ="image/jpg">
-                        <source media="(min-width: 768px)"
-                               srcset = "src/img/triple-tablet-2x.webp 2x, src/img/triple-tablet-1x.webp 1x" type ="image/webp"
-                               srcset = "src/img/triple-tablet-2x.jpg 2x, src/img/triple-tablet-1x.jpg 1x" type ="image/jpg">
-                        <source media="(min-width: 320px)"
-                               srcset = "src/img/triple-mobile-2x.webp 2x, src/img/triple-mobile-1x.webp 1x" type ="image/webp"
-                               srcset = "src/img/triple-mobile-2x.jpg 2x, src/img/triple-mobile-1x.jpg 1x" type ="image/jpg">
-                       <img class="catalog-card__img" src="src/img/triple-mobile-1x.jpg" alt="Вязаные корзинки">
-                   </picture>
-                </div>
-                <div class="catalog-card__to-buy">
-                    <p class="catalog-card__price">Цена: 990 руб.</p>
-=======
   <header class="header">
     <nav class="nav">
       <div class="menu-top opened">
@@ -135,7 +29,6 @@
         <ul class="menu-top__list closed" id="menuList">
           <li class="menu-top__logo">
             <a class="menu-top__logo-link" href="index.html">
->>>>>>> 54bbb05881440f8b3706cffcd9ad9ba29f740e14
 
               <img class="menu-top__logo-tablet" src="src/img/logo-tablet.png" width="113px" height="46px" alt="Mishka">
               <img class="menu-top__logo-desktop" src="src/img/logo-desktop.png" width="149px" height="72px" alt="Mishka">
@@ -195,8 +88,8 @@
          <h3 class="catalog-card__title catalog-card__title--hot">Вязаные корзинки</h3>
          <span class="catalog-card__hot-sale">Товар недели</span>
         </div>
-      <div class="catalog-card__item">       
-          
+      <div class="catalog-card__item">
+
         <div class="catalog-card__detail">
             <div class="catalog-card__text-wrap">
           <p class="catalog-card__descr">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
@@ -217,9 +110,9 @@
           </div>
           <div class="catalog-card__to-buy">
                 <p class="catalog-card__price">Цена: 990 руб.</p>
-                <button class="btn catalog-card__btn" id="myBtn">Заказать</button>
+                <button class="btn catalog-card__btn" id="btn">Заказать</button>
           </div>
-        
+
         <div class="catalog-card__picture">
           <picture>
             <source media="(min-width: 1024px)" srcset="src/img/triple-desktop-2x.webp 2x, src/img/triple-desktop-1x.webp 1x" type="image/webp"
@@ -236,7 +129,7 @@
           <p class="catalog-card__price">Цена: 990 руб.</p>
           <button class="btn catalog-card__btn" id="myBtn">Заказать</button>
         </div> -->
-        <div class="modal-ctg" id="myModal">
+        <div class="modal-ctg" id="modal">
           <h2 class="modal-ctg__title">Добавить в корзину</h2>
           <p class="modal-ctg__text">Выберите размер</p>
           <div class="modal-ctg__form">
@@ -255,7 +148,7 @@
           </div>
           <button class="btn modal-ctg__btn" id="closeBtn">Добавить</button>
         </div>
-        <div class="overlay" id="myOverlay"></div>
+        <div class="overlay" id="overlay"></div>
       </div>
     </section>
     <section class="decoration">
