переименование id в модальном окошке

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           </div>
           <div class="catalog-card__to-buy">
                 <p class="catalog-card__price">Цена: 990 руб.</p>
-                <button class="btn catalog-card__btn" id="myBtn">Заказать</button>
+                <button class="btn catalog-card__btn" id="btn">Заказать</button>
           </div>
         
         <div class="catalog-card__picture">
@@ -129,7 +129,7 @@
           <p class="catalog-card__price">Цена: 990 руб.</p>
           <button class="btn catalog-card__btn" id="myBtn">Заказать</button>
         </div> -->
-        <div class="modal-ctg" id="myModal">
+        <div class="modal-ctg" id="modal">
           <h2 class="modal-ctg__title">Добавить в корзину</h2>
           <p class="modal-ctg__text">Выберите размер</p>
           <div class="modal-ctg__form">
@@ -148,7 +148,7 @@
           </div>
           <button class="btn modal-ctg__btn" id="closeBtn">Добавить</button>
         </div>
-        <div class="overlay" id="myOverlay"></div>
+        <div class="overlay" id="overlay"></div>
       </div>
     </section>
     <section class="decoration">
@@ -174,8 +174,9 @@
     </section>
     <section class="slider">
       <div class="slider__bg">
+            <h2 class="slider__caption">Отзывы</h2>
         <div class="slider__slides" id="content">
-          <h2 class="slider__caption">Отзывы</h2>
+          
           <div class="slide-content slider__slide1">
             <p class="slider__comment">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек.
               В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также
