--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="menu-bottom">
         <div class="menu-bottom__bg">
           <div class="menu-bottom__cover">
-            <h1 class="menu-bottom__title">Милые штуки ручной работы для дома</h1>
+            <h1 class="menu-bottom__title">Милые штуки ручной <br> работы для дома</h1>
             <ul class="menu-bottom__list">
               <span class="menu-bottom__line"></span>
               <li class="menu-bottom__item">
@@ -207,7 +207,9 @@
             <button class="slider__btn-left" id="btn-1"></button>
             <button class="slider__btn-right" id="btn-2"></button>
           </div>
+
           <button class="btn slider__write">Написать</button>
+
         </div>
       </div>
     </section>
