последние коррективы, я надеюсь

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVLQ28aCzVhXLDJnQedaUJfQ_6jA9QDuE&callback=initMap">
             </script>
           </div>
-          <picture class="contacts__picture" id="mapImg">
+          <!-- <picture class="contacts__picture" id="mapImg">
             <source media="(min-width: 1024px)" srcset="src/img/map-desktop-2x.webp 2x, src/img/map-desktop-1x.webp 1x" type="image/webp"
               srcset="src/img/map-desktop-2x.jpg 2x, src/img/map-desktop-1x.jpg 1x" type="image/jpg">
             <source media="(min-width: 768px)" srcset="src/img/map-tablet-2x.webp 2x, src/img/map-tablet-1x.webp 1x" type="image/webp"
@@ -239,7 +239,7 @@
             <source media="(min-width: 320px)" srcset="src/img/map-mobile-2x.webp 2x, src/img/map-mobile-1x.webp 1x" type="image/webp"
               srcset="src/img/map-mobile-2x.jpg 2x, src/img/map-mobile-1x.jpg 1x" type="image/jpg">
             <img src="src/img/map-mobile-1x.jpg" alt="Map">
-          </picture>
+          </picture> -->
         </div>
         <button class="btn contacts__btn">Напишите нам</button>
       </div>
